--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Babel==2.6.0
+certifi==2018.4.16
+chardet==3.0.4
 Django==2.0.7
 django-ckeditor==5.6.1
 django-debug-toolbar==1.9.1
@@ -6,7 +8,10 @@ django-js-asset==1.1.0
 django-mptt==0.9.0
 django-phone-field==1.5.4
 django-phonenumber-field==2.0.0
+idna==2.7
 phonenumberslite==8.9.10
 Pillow==5.2.0
 pytz==2018.5
+requests==2.19.1
 sqlparse==0.2.4
+urllib3==1.23
