--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+amqp==2.3.2
+asn1crypto==0.24.0
 Babel==2.6.0
+billiard==3.5.0.4
+celery==4.2.1
 certifi==2018.4.16
+cffi==1.11.5
 chardet==3.0.4
+cryptography==2.3
 Django==2.0.7
 django-ckeditor==5.6.1
 django-debug-toolbar==1.9.1
@@ -9,9 +15,14 @@ django-mptt==0.9.0
 django-phone-field==1.5.4
 django-phonenumber-field==2.0.0
 idna==2.7
+kombu==4.2.1
 phonenumberslite==8.9.10
 Pillow==5.2.0
+pycparser==2.18
+pyOpenSSL==18.0.0
 pytz==2018.5
 requests==2.19.1
+six==1.11.0
 sqlparse==0.2.4
 urllib3==1.23
+vine==1.1.4
