--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ idna==2.7
 kombu==4.2.1
 phonenumberslite==8.9.10
 Pillow==5.2.0
+psycopg2-binary==2.7.5
 pycparser==2.18
 pyOpenSSL==18.0.0
 pytz==2018.5
