--- a/requirements.txt
+++ b/requirements.txt
@@ -11,16 +11,20 @@ Django==2.0.7
 django-ckeditor==5.6.1
 django-debug-toolbar==1.9.1
 django-js-asset==1.1.0
+django-jsoneditor==0.0.12
 django-mptt==0.9.0
 django-phone-field==1.5.4
 django-phonenumber-field==2.0.0
 idna==2.7
 kombu==4.2.1
+packaging==17.1
 phonenumberslite==8.9.10
 Pillow==5.2.0
+prettytable==0.7.2
 psycopg2-binary==2.7.5
 pycparser==2.18
 pyOpenSSL==18.0.0
+pyparsing==2.2.0
 pytz==2018.5
 requests==2.19.1
 six==1.11.0
