--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ chardet==3.0.4
 cryptography==2.3
 Django==2.0.7
 django-ckeditor==5.6.1
+django-colorfield==0.1.15
 django-debug-toolbar==1.9.1
 django-js-asset==1.1.0
 django-jsoneditor==0.0.12
