--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 amqp==2.3.2
 asn1crypto==0.24.0
+astroid==2.0.2
 Babel==2.6.0
+base58==1.0.0
 billiard==3.5.0.4
+block-io==1.1.6
 celery==4.2.1
 certifi==2018.4.16
 cffi==1.11.5
@@ -16,19 +19,36 @@ django-jsoneditor==0.0.12
 django-mptt==0.9.0
 django-phone-field==1.5.4
 django-phonenumber-field==2.0.0
+django-qr-code==1.0.0
+ecdsa==0.13
+future==0.16.0
 idna==2.7
+isort==4.3.4
+jedi==0.12.1
 kombu==4.2.1
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
 packaging==17.1
+parso==0.3.1
 phonenumberslite==8.9.10
 Pillow==5.2.0
+pluggy==0.7.1
 prettytable==0.7.2
 psycopg2-binary==2.7.5
+pycodestyle==2.4.0
 pycparser==2.18
+pycrypto==2.6.1
+pylint==2.1.0
 pyOpenSSL==18.0.0
 pyparsing==2.2.0
+python-language-server==0.19.0
 pytz==2018.5
+qrcode==6.0
 requests==2.19.1
 six==1.11.0
 sqlparse==0.2.4
+typed-ast==1.1.0
+typing==3.6.4
 urllib3==1.23
 vine==1.1.4
+wrapt==1.10.11
